<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/black"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="16sp"
    >

    <TextView
        android:id="@+id/calcIn"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1"
        android:text="@string/CalcInput"
        android:textSize="50sp"
        android:textColor="@color/white"
        android:textAlignment="textEnd"
        android:gravity="bottom"
        tools:ignore="RtlCompat" />


    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center_horizontal"
    >
    <Button
        android:layout_width="70sp"
        android:layout_height="70sp"
        android:layout_weight="1"
        android:background="@drawable/button_bg"
        android:text="@string/_1"
        android:textAlignment="center"
        android:textColor="@color/orange"
        android:textSize="30sp"
        android:textStyle="bold"
        android:onClick="onDigit"
        style="?android:attr/buttonBarButtonStyle"
        tools:ignore="UsingOnClickInXml" />
    <Button
        android:layout_width="70sp"
        android:layout_height="70sp"
        android:layout_weight="1"
        android:background="@drawable/button_bg"
        android:text="@string/_2"
        android:textAlignment="center"
        android:textColor="@color/orange"
        android:textSize="30sp"
        android:textStyle="bold"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_marginStart="20sp"
        android:onClick="onDigit"
        tools:ignore="UsingOnClickInXml" />
    <Button
        android:layout_width="70sp"
        android:layout_height="70sp"
        android:layout_weight="1"
        android:background="@drawable/button_bg"
        android:text="@string/_3"
        android:textAlignment="center"
        android:textColor="@color/orange"
        android:textSize="30sp"
        android:textStyle="bold"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_marginStart="20sp"
        android:onClick="onDigit"
        tools:ignore="UsingOnClickInXml" />
    <Button
        android:layout_width="70sp"
        android:layout_height="70sp"
        android:layout_weight="1"
        android:background="@drawable/button_bg"
        android:text="@string/div"
        android:textAlignment="center"
        android:textColor="@color/orange"
        android:textSize="30sp"
        android:textStyle="bold"
        android:onClick="arithmetic"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_marginStart="20sp"
        tools:ignore="UsingOnClickInXml" />
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="20sp"
        >
        <Button
            android:layout_width="70sp"
            android:layout_height="70sp"
            android:layout_weight="1"
            android:background="@drawable/button_bg"
            android:text="@string/_4"
            android:textAlignment="center"
            android:textColor="@color/orange"
            android:textSize="30sp"
            android:textStyle="bold"
            style="?android:attr/buttonBarButtonStyle"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:layout_width="70sp"
            android:layout_height="70sp"
            android:layout_weight="1"
            android:background="@drawable/button_bg"
            android:text="@string/_5"
            android:textAlignment="center"
            android:textColor="@color/orange"
            android:textSize="30sp"
            android:textStyle="bold"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_marginStart="20sp"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:layout_width="70sp"
            android:layout_height="70sp"
            android:layout_weight="1"
            android:background="@drawable/button_bg"
            android:text="@string/_6"
            android:textAlignment="center"
            android:textColor="@color/orange"
            android:textSize="30sp"
            android:textStyle="bold"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_marginStart="20sp"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:layout_width="70sp"
            android:layout_height="70sp"
            android:layout_weight="1"
            android:background="@drawable/button_bg"
            android:text="@string/multiplication"
            android:textAlignment="center"
            android:textColor="@color/orange"
            android:textSize="30sp"
            android:textStyle="bold"
            android:onClick="arithmetic"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_marginStart="20sp"
            tools:ignore="UsingOnClickInXml" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="20sp"
        >
        <Button
            android:layout_width="70sp"
            android:layout_height="70sp"
            android:layout_weight="1"
            android:background="@drawable/button_bg"
            android:text="@string/_7"
            android:textAlignment="center"
            android:textColor="@color/orange"
            android:textSize="30sp"
            android:textStyle="bold"
            android:onClick="onDigit"
            style="?android:attr/buttonBarButtonStyle"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:layout_width="70sp"
            android:layout_height="70sp"
            android:layout_weight="1"
            android:background="@drawable/button_bg"
            android:text="@string/_8"
            android:textAlignment="center"
            android:textColor="@color/orange"
            android:textSize="30sp"
            android:textStyle="bold"
            android:onClick="onDigit"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_marginStart="20sp"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:layout_width="70sp"
            android:layout_height="70sp"
            android:layout_weight="1"
            android:background="@drawable/button_bg"
            android:text="@string/_9"
            android:textAlignment="center"
            android:textColor="@color/orange"
            android:textSize="30sp"
            android:textStyle="bold"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_marginStart="20sp"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:layout_width="70sp"
            android:layout_height="70sp"
            android:layout_weight="1"
            android:background="@drawable/button_bg"
            android:text="@string/minus"
            android:textAlignment="center"
            android:textColor="@color/orange"
            android:textSize="30sp"
            android:textStyle="bold"
            android:onClick="arithmetic"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_marginStart="20sp"
            tools:ignore="UsingOnClickInXml" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20sp"
        android:gravity="center_horizontal"
        >
        <Button
            android:layout_width="160sp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textAlignment="center"
            android:textColor="@color/orange"
            android:textSize="30sp"
            android:textStyle="bold"
            android:paddingVertical="5sp"
            android:text="@string/_0"
            android:background="@drawable/button_rect"
            style="?android:attr/buttonBarButtonStyle"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:layout_width="70sp"
            android:layout_height="70sp"
            android:layout_weight="1"
            android:background="@drawable/button_bg"
            android:text="@string/clr"
            android:textAlignment="center"
            android:textColor="@color/orange"
            android:textSize="30sp"
            android:textStyle="bold"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_marginStart="20sp"
            android:onClick="onCLR"
            tools:ignore="OnClick,UsingOnClickInXml" />
        <Button
            android:layout_width="70sp"
            android:layout_height="70sp"
            android:layout_weight="1"
            android:background="@drawable/button_bg"
            android:text="@string/plus"
            android:textAlignment="center"
            android:textColor="@color/orange"
            android:textSize="30sp"
            android:textStyle="bold"
            android:onClick="arithmetic"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_marginStart="20sp"
            tools:ignore="UsingOnClickInXml" />
    </LinearLayout>
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="20sp"
       android:gravity="center_vertical"
       android:layout_marginBottom="10sp"
       >

       <Button
           style="?android:attr/buttonBarButtonStyle"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_weight="3"
           android:background="@drawable/button_rect"
           android:text="@string/equal"
           android:textAlignment="center"
           android:textColor="@color/orange"
           android:textSize="40sp"
           android:textStyle="bold"
           android:onClick="equalTo"
           tools:ignore="UsingOnClickInXml" />

       <Button
        android:layout_width="0dp"
        android:layout_height="70sp"
        android:layout_weight="1"
        android:background="@drawable/button_bg"
        android:text="@string/dot"
        android:textAlignment="center"
           android:textColor="@color/orange"
        android:textSize="30sp"
        android:textStyle="bold"
           android:onClick="dot"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_marginStart="20sp"
           tools:ignore="UsingOnClickInXml" />
   </LinearLayout>
</LinearLayout>